test/files/neg/t5753/Impls_Macros_1.scala
import scala.reflect.macros.blackbox.Context

trait Impls {
  def impl(c: Context)(x: c.Expr[Any]) = x
}

